--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Email Spam Checker</h1>
+        <h1>EMAIL SPAM CHECKER</h1>
         <p class="description">
             Likely headed for the dreaded spam folder. Use our quick spam test to identify which features of your message, SPF or DNS records, or mail server configuration need improvement to deliver directly into the inbox. Detect important issues affecting your inboxing rates with this email deliverability test that predicts email inboxing with a quick email spam check and sender reputation lookup.
         </p>
